# iso-42005-impact-mcp

./: .mcp.json  LICENSE  README.md  SECURITY.md  acp.json  llms.txt  pyproject.toml  server.json  server.py  smithery.yaml
.well-known/: agent-card.json  agent.json  mcp-server-card.json
tests/: test_iso42005.py
